public/css/user.css
/* ... */
.resume_small_edit_button:hover
{
    background-color: rgba(0,146,210,.8);
}








.user_main_job_level1
{
    width: 900px;
    min-height: 28px;
    max-height: 144px;
    margin-top: 5px;

    border-left: 5px solid rgba(0,0,0,.7);
}
.user_main_job_level2
{
    width: 900px;
    min-height: 28px;
    max-height: 144px;
    margin-top: 5px;

    border-left: 5px solid rgba(0,0,0,.7);
}
.user_main_job_key
{
    width: 900px;
    min-height: 28px;
    max-height: 144px;
    margin-top: 5px;

    border-left: 5px solid rgba(0,0,0,.7);
}
.user_main_job_keylist
{
    display: flex;
    overflow: hidden;

    width: 900px;
    min-height: 28px;
    max-height: 144px;

    flex-wrap: wrap;
}
.user_main_job_keylist li
{
    font-size: 15px;
    line-height: 28px;

    height: 28px;
    margin-left: 20px;
    padding: 0 10px;

    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;
    text-align: center;

    color: rgba(0,0,0,.8);
}
.user_main_job_keylist li:hover
{
    color: rgba(241,241,241,1);
    background-color: rgba(0,146,210,1);
}
.li_nohover_bgcolor:hover
{
    color: rgba(0,0,0,.8) !important;
    background-color: rgba(0,0,0,0) !important;
}
.user_main_job_keylist_order
{
    display: flex;
    overflow: hidden;

    width: 900px;
    min-height: 40px;
    max-height: 144px;

    flex-wrap: wrap;
}
.user_main_job_keylist_order a
{
    display: inline-block;

    padding: 0 10px;
}
.user_main_job_keylist_order li
{
    font-size: 15px;
    line-height: 40px;

    min-width: 70px;
    height: 40px;
    padding: 0 10px;

    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;
    text-align: center;
}
.user_main_job_keylist_order a:hover
{
    color: #fff;
    background-color: rgba(0,146,210,1);
}







.user_single_item
{
    top: 50px;

    float: left;
    overflow: hidden;

    width: 450px;
    height: 180px;
    margin-top: 50px;

    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;

    border-left: 5px solid rgba(0,0,0,.7);
}
.user_single_item:hover
{
    border-left: 5px solid rgba(0,146,210,1);
}
.user_single_item a
{
    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;
}
.user_single_item_jobinfo
{
    position: relative;

    float: left;

    width: 450px;
    height: 180px;
    padding: 0 20px 0 30px;
}

.user_main_single_jobinfo_button
{
    font-size: 14px;
    line-height: 32px;

    position: relative;

    width: 120px;
    height: 32px;

    cursor: pointer;
    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;
    text-align: center;

    color: #fff;
    border-radius: 5px;
    background-color: rgba(0,146,210,.8);
}
.user_main_single_advance
{
    line-height: 32px;

    position: absolute;
    left: 37%;

    max-width: 220px;
    height: 32px;
    padding: 0 10px;

    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;

    color: rgba(255,255,255,.8);
    background-color: rgba(0,146,210,1);
}
.user_main_single_advance_tag_tan
{
    position: absolute;
    top: 0;
    left: -15px;

    width: 0;
    height: 0;

    border-width: 16px 15px 16px 0;
    border-style: solid;
    border-color: transparent rgba(0,146,210,1) transparent transparent;
}
.user_main_single_jobinfo_button a:hover
{
    color: rgba(255,255,255,1);
}


















.index_single_item
{
    float: left;
    overflow: hidden;

    width: 900px;
    height: 130px;
    margin-bottom: 50px;

    -webkit-transition: all .2s;
         -o-transition: all .2s;
            transition: all .2s;

    border-left: 5px solid rgba(0,0,0,.2);
}
.index_single_item:hover
{
    border-left: 5px solid rgba(0,146,210,1);
}
.index_single_item a
{
    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;
}
.index_single_item_jobinfo
{
    position: relative;

    float: left;

    width: 900px;
    height: 130px;
    padding: 0 20px 0 50px;
}
.index_single_item_jobinfo .small
{
    width: 100px;
}
.index_single_item_jobinfo_salary
{
    font-size: 30px;
    line-height: 30px;

    position: absolute;
    top: 0;
    right: 42%;

    width: 200px;
    height: 30px;
}
.index_single_item_jobinfo_button
{
    font-size: 15px;
    line-height: 40px;

    position: absolute;

    width: 100px;
    height: 40px;

    cursor: pointer;
    -webkit-transition: all .1s;
         -o-transition: all .1s;
            transition: all .1s;
    text-align: center;

    color: #fff;
    border-radius: 5px;
    background-color: rgba(0,146,210,1);
}






















.paginate
{
    line-height: 80px;

    overflow: hidden;

    box-sizing: content-box;
    width: 900px;
    height: 80px;
    padding-top: 20px;
}
.pagination
{
    margin: 22px 0;
    padding-left: 0;

    border-radius: 4px;
}.pagination > li
{
    display: inline;
}.pagination > li > a,
.pagination > li > span
{
    line-height: 1.6;

    position: relative;

    float: left;

    margin-left: -1px;
    padding: 6px 12px;

    text-decoration: none;

    color: #3097d1;
    border: 1px solid #ddd;
    background-color: #fff;
}.pagination > li:first-child > a,
.pagination > li:first-child > span
{
    margin-left: 0;

    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}.pagination > li:last-child > a,
.pagination > li:last-child > span
{
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}.pagination > li > a:focus,
.pagination > li > a:hover,
.pagination > li > span:focus,
.pagination > li > span:hover
{
    z-index: 2;

    color: #216a94;
    border-color: #ddd;
    background-color: #eee;
}.pagination > .active > a,
/* ... */

